fix card spacing & move expense title

--- a/Budgetation.App/ClientApp/src/styles.scss
+++ b/Budgetation.App/ClientApp/src/styles.scss
@@ -26,29 +26,34 @@ body { margin: 0; /*font-family: Roboto, "Helvetica Neue", sans-serif;*/ }
 .justify-content-around{justify-content: space-around}
 .justify-content-end{justify-content: end}
 
-.mb-1{margin-bottom: .8rem;}
-.mb-2{margin-bottom: 1rem;}
-.mb-3{margin-bottom: 1.3rem;}
-.mb-4{margin-bottom: 1.6rem;}
-.mb-5{margin-bottom: 2rem;}
+.align-items-center{align-items: center}
 
-.mt-1{margin-bottom: .8rem;}
-.mt-2{margin-bottom: 1rem;}
-.mt-3{margin-bottom: 1.3rem;}
-.mt-4{margin-bottom: 1.6rem;}
-.mt-5{margin-bottom: 2rem;}
+.m-0{margin: 0 !important;}
 
-.ml-1{margin-left: .8rem;}
-.ml-2{margin-left: 1rem;}
-.ml-3{margin-left: 1.3rem;}
-.ml-4{margin-left: 1.6rem;}
-.ml-5{margin-left: 2rem;}
+.mb-0{margin-bottom: 0 !important;}
+.mb-1{margin-bottom: .8rem !important;}
+.mb-2{margin-bottom: 1rem !important;}
+.mb-3{margin-bottom: 1.3rem !important;}
+.mb-4{margin-bottom: 1.6rem !important;}
+.mb-5{margin-bottom: 2rem !important;}
 
-.mr-1{margin-right: .8rem;}
-.mr-2{margin-right: 1rem;}
-.mr-3{margin-right: 1.3rem;}
-.mr-4{margin-right: 1.6rem;}
-.mr-5{margin-right: 2rem;}
+.mt-1{margin-bottom: .8rem !important;}
+.mt-2{margin-bottom: 1rem !important;}
+.mt-3{margin-bottom: 1.3rem !important;}
+.mt-4{margin-bottom: 1.6rem !important;}
+.mt-5{margin-bottom: 2rem !important;}
+
+.ml-1{margin-left: .8rem !important;}
+.ml-2{margin-left: 1rem !important;}
+.ml-3{margin-left: 1.3rem !important;}
+.ml-4{margin-left: 1.6rem !important;}
+.ml-5{margin-left: 2rem !important;}
+
+.mr-1{margin-right: .8rem !important;}
+.mr-2{margin-right: 1rem !important;}
+.mr-3{margin-right: 1.3rem !important;}
+.mr-4{margin-right: 1.6rem !important;}
+.mr-5{margin-right: 2rem !important;}
 
 .overflow-y-hidden {overflow-y: hidden;}
 .overflow-y-auto {overflow-y: auto;}
